--- a/app/views/forums/new.html.erb
+++ b/app/views/forums/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Forums#new</h1>
-<p>Find me in app/views/forums/new.html.erb</p>
+
+
+<div class="container">
+  <div class="row">
+    <%= form_for @forum do |f| %>
+
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "form-control", placeholder: "enter your title", rows: 10 %>
+      </div>
+
+      <div class="form-group">
+        <%= f.fields_for :posts do |p| %>
+          <%= p.label :body %>
+          <%= p.text_field :body, class: "form-control", placeholder: "enter your title", rows: 10 %>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.button "create" %>
+      </div>
+
+    <% end %>
+  </div>  
+</div>
