--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.post {
+  border-top: 1px solid #ccc;
+  padding: 8px 0px;
+
+  &:target {
+    background-color: rgb(248, 238, 199);
+    padding: 8px;
+  }
+}
