--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Forums#show</h1>
-<p>Find me in app/views/forums/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h1><%= @forum.title %></h1>
+    <h4>created by: <%= @forum.user.email %></h4>
+  </div>
+  <div class="row">
+    <% @forum.posts.each do |post| %>
+      <%= div_for post do %>
+        <h5><%= post.body %></h5>
+        <h6>created by: <%= post.user.email %> and created_at: <%= post.created_at %></h6>
+      <% end %>
+    <% end %>
+  </div>
+  <div class="row">
+    <%= render partial: "posts/form", locals: {forum: @forum, post: @forum.posts.new} %>
+  </div>
+</div>
