--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -7,7 +7,7 @@
     <% @forum.posts.each do |post| %>
       <%= div_for post do %>
         <h5><%= post.body %></h5>
-        <h6>created by: <%= post.user.email %> and created_at: <%= post.created_at %></h6>
+        <h6>created by: <%= post.user.email %> and created_at: <%= local_time_ago(post.created_at) %></h6>
       <% end %>
     <% end %>
   </div>
